fix code block background color of markdown preview in dark mode

--- a/nvim/others/preview-dark.css
+++ b/nvim/others/preview-dark.css
@@ -177,7 +177,7 @@ code {
 }
 
 pre {
-    background: #343232;
+    background: #171514;
     white-space: pre;
     padding: 16px;
     overflow: auto;
@@ -186,7 +186,7 @@ pre {
 }
 
 p > code {
-    background: #343232;
+    background: #171514;
 }
 
 b,
